--- a/OttawaStreetCameras/CameraPage.xaml
+++ b/OttawaStreetCameras/CameraPage.xaml
@@ -6,5 +6,5 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <Image x:Name="image" Stretch="None" HorizontalAlignment="Center" Margin="10,10,10,10" VerticalAlignment="Center"/>
+    <Image x:Name="image" CacheMode="BitmapCache" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 </Page>
