code cleanup, fixed list reloading when back pressed

--- a/OttawaStreetCameras/CameraPage.xaml
+++ b/OttawaStreetCameras/CameraPage.xaml
@@ -1,4 +1,5 @@
 ﻿<Page
+    NavigationCacheMode="Disabled"
     x:Class="OttawaStreetCameras.CameraPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
