--- a/OttawaStreetCameras/MainPage.xaml
+++ b/OttawaStreetCameras/MainPage.xaml
@@ -1,4 +1,5 @@
 ﻿<Page
+    NavigationCacheMode="Required"
     x:Class="OttawaStreetCameras.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
