--- a/OttawaStreetCameras/CameraPage.xaml
+++ b/OttawaStreetCameras/CameraPage.xaml
@@ -7,5 +7,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <Image x:Name="image" CacheMode="BitmapCache" Stretch="Uniform" MaxHeight="500" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <ScrollViewer>
+        <VariableSizedWrapGrid Name="grid"  Orientation="Horizontal" HorizontalAlignment="Center" >
+        </VariableSizedWrapGrid>
+
+    </ScrollViewer>
+
+
 </Page>
