improved camera view. titles easier to read

--- a/OttawaStreetCameras/CameraPage.xaml
+++ b/OttawaStreetCameras/CameraPage.xaml
@@ -8,8 +8,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <ScrollViewer>
-        <VariableSizedWrapGrid Name="grid"  Orientation="Horizontal" HorizontalAlignment="Center" >
-        </VariableSizedWrapGrid>
+        <VariableSizedWrapGrid Name="grid"  Orientation="Horizontal" HorizontalAlignment="Center" />
 
     </ScrollViewer>
 
