--- a/OttawaStreetCameras/MainPage.xaml
+++ b/OttawaStreetCameras/MainPage.xaml
@@ -1,28 +1,59 @@
 ﻿<Page
-    NavigationCacheMode="Required"
-    x:Class="OttawaStreetCameras.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:OttawaStreetCameras"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Custom="using:Windows.UI.Xaml.Controls.Maps"
+    NavigationCacheMode="Required"
+    x:Class="OttawaStreetCameras.MainPage"
     mc:Ignorable="d">
     <RelativePanel>
 
         <CommandBar 
-            Name="menu"
+            x:Name="menu"
             Background="{ThemeResource SystemAccentColor}"
             RelativePanel.AlignLeftWithPanel="True" 
             RelativePanel.AlignRightWithPanel="True"
             RelativePanel.AlignTopWithPanel="True">
             <AppBarButton 
-                Name="openCams"
+                x:Name="openCams"
                 Visibility="Collapsed"
                 Content="Show cameras"
                 Width="Auto"
                 Height="Auto"
-                Click="openCams_Click"/>
+                Click="Handle_Menu_Click"/>
+            <AppBarSeparator HorizontalAlignment="Center" Height="44" VerticalAlignment="Center" Width="32"/>
 
+            <AppBarButton
+                Content="Search by neighbourhood"
+                x:Name="neighbourhoodBtn"
+                Width="Auto"
+                Height="Auto"
+                Click="Handle_Menu_Click"/>
+
+            <AppBarSeparator HorizontalAlignment="Center" Height="44" VerticalAlignment="Center" Width="32"/>
+            <AppBarButton 
+                Content="Favourites"
+                x:Name="favouriteBtn"
+                Click="Handle_Menu_Click"
+                Width="Auto"
+                Height="Auto"/>
+            <AppBarSeparator HorizontalAlignment="Center" Height="44" VerticalAlignment="Center" Width="32"/>
+            <AppBarButton 
+                Name="hiddenBtn"
+                Content="Hidden"
+                Width="Auto"
+                Height="Auto"
+                Click="Handle_Menu_Click"/>
+            <AppBarSeparator HorizontalAlignment="Center" Height="44" VerticalAlignment="Center" Width="32"/>
+            <AppBarButton 
+                Name="switchBtn"
+                Content="Switch view"
+                Width="Auto"
+                Height="Auto"
+                Click="Handle_Menu_Click"/>
+            <AppBarSeparator HorizontalAlignment="Center" Height="44" VerticalAlignment="Center" Width="32"/>
         </CommandBar>
 
         <AutoSuggestBox 
@@ -32,18 +63,25 @@
             RelativePanel.AlignRightWithPanel="True" 
             SuggestionChosen="AutoSuggestBox_SuggestionChosen"
             TextChanged="AutoSuggestBox_TextChanged"
-            QuerySubmitted="AutoSuggestBox_QuerySubmitted">
-            <AutoSuggestBox.QueryIcon>
-                <SymbolIcon Symbol="Find"/>
-            </AutoSuggestBox.QueryIcon>
-        </AutoSuggestBox>
+            QueryIcon="Find"/>
 
-        <ListView Name="listView"
-                  IsMultiSelectCheckBoxEnabled="True" 
-                  SelectionMode="Multiple" 
-                  SelectionChanged="listView_SelectionChanged" 
-                  RelativePanel.AlignLeftWithPanel="True" 
-                  RelativePanel.AlignRightWithPanel="True" 
-                  RelativePanel.Below="searchBox"/>
+        <ListView 
+            Name="listView"
+            IsMultiSelectCheckBoxEnabled="True" 
+            SelectionMode="Multiple" 
+            SelectionChanged="listView_SelectionChanged" 
+            RelativePanel.AlignLeftWithPanel="True" 
+            RelativePanel.AlignRightWithPanel="True" 
+            RelativePanel.Below="searchBox"/>
+
+        <Custom:MapControl 
+            RelativePanel.AlignLeftWithPanel="True" 
+            RelativePanel.AlignRightWithPanel="True" 
+            RelativePanel.Below="searchBox"
+            RelativePanel.AlignBottomWithPanel="True"
+            Name="mapView"
+            MapServiceToken="mhH5gC4zIdeVUl9fotor~OOGwNPRv2DQd0Y3ThyztTA~AnJwoEaz_5BmEQzVkoLG_jKA73eKgy3zU4tNm-yQlDmDiDDsmqobEBy-X2I-lp4M"
+            Visibility="Collapsed"/>
+
     </RelativePanel>
 </Page>
